@@ -220,6 +220,7 @@ move.destination=Nyt emne navn
 move.editcomment={0} omd\u00F8bt til {1}
 move.exception.destinationexists=Emnet {0} eksistere allerede.
 move.exception.nodestination=Ingen destinations emne specificeret.
+move.exception.permission=The topic {0} has been protected and cannot be moved by users without appropriate permissions.
 move.overview=Denne side giver mulighed for at flytte et emne (inklusiv dets historik) til et nyt navn.\r\nDet gamle emnenavn vil automatisk redirigere til det nye navn. V\u00E6r opm\u00E6rksom p\u00E5 at emnet <b>ikke</b> kan flyttes hvis der allerede findes et emne under det nye navn.
 move.title=Flyt {0}
 recentchanges.caption.comments=Kommentare
